--- a/style.css
+++ b/style.css
@@ -86,3 +86,21 @@ color: #fff;
 font-size: 35px;
 margin : 50px 0px;
 }
+@media only screen and (max-width: 430px) {
+    .myLabel input{
+        font-size : 12px;
+        padding : 4px 7px;
+    }
+    .myLabel label{
+        font-size : 14px;
+    }
+    h3{
+        font-size: 25px;
+    }
+    #_mybtn{
+        padding: 7px 25px;
+    }
+    .myCard{
+        padding : 50px 30px;
+    }
+}
